<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_activity_bg"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="193dp"
        android:layout_height="88dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="180dp"
        android:text="@string/startActivity_SignIn"
        android:textColor="#F60707"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/emailID"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/editTextpasswprd"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgot_pass"
        android:textColor="#FD0000" />

    <ImageButton
        android:id="@+id/gSignButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/googleg_standard_color_18" />

</LinearLayout>